refactor: cleaning up more local vars to use 'var` (#213)